k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ahmedkhalaf666/social-dotnet-api:v6.0.0
        ports:
        - containerPort: 80
        - containerPort: 81
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: grpc
    port: 81
    targetPort: 81
