k8s/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: ahmedkhalaf666/social-dotnet-chat:v5.2.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 81
    targetPort: 81
    name: grpc
