k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: ahmedkhalaf666/social-dotnet-notification:v5.2.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 81
    targetPort: 81
    name: grpc
